      as \code{DBL_MAX} even if \file{STRICT_R_HEADERS} is defined.

      \item It is intended that \file{STRICT_R_HEADERS} will become the
      default prior to release.  This will remove the legacy definitions
      of \code{PI}, \code{Calloc}, \code{Realloc} and \code{Free}: use
      \code{M_PI}, \code{R_Calloc}, \code{R_Realloc} or \code{R_Free}
      instead.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check --as-cran} will compile C++ code with
      \code{-DR_NO_REMAP}.

      \item \command{R CMD check --as-cran} notes bad parts in the
      \file{DESCRIPTION} file's URL fields.

      \item Installation will define \code{STRICT_R_HEADERS} if
      environment variable \env{_R_USE_STRICT_R_HEADERS_} is set to a
      true value: this is done by \command{R CMD check --as-cran}.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item Auto-generated \code{citation()} entries no longer include
      (additional) URLs in the \samp{note} field (\PR{18547}).

      \item \code{as.data.frame.list()} gets a new option \code{new.names}
      and now preserves \code{NA} names, thus fixing the \code{format()}
      method for data frames, and also bug \PR{18745}.
      \I{Relatedly}, the \code{format()} method gets an option \code{cut.names}.

      \item \code{stem()} formats correctly also in cases where rounding
      up, e.g., from 9.96 to 10 needs more digits; thanks to \I{Ella
      Kaye} and \I{Kelly Bodwin}, fixing \PR{8934} during \sQuote{\I{R
      Dev Day}} at \I{useR!2024}.

      Additionally, \code{stem(x)} now works normally also when
      \code{length(x) == 1}.

      \item \pkg{tools}' \code{toTitleCase()} now works better, fixing
      \PR{18674}, thanks to \I{Shannon Pileggi}, \I{Sarah Zeller},
      \I{Reiko Okamoto}, and \I{Hugo Gruson}'s \sQuote{\I{R Dev Day}}
      effort.

      \item Printing matrices (typically with many rows and or columns)